syntax = "proto3";

option go_package = "../protobuf";
option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";

package protobuf;

service AccServer {
    // 查询用户是否在线
    rpc QuerUserOnline(QueryUserOnlineReq) returns (QueryUserOnlineRsp) {
    }

    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {
    }
    
    // 给这台机器的房间内所有用户发送消息
    rpc SendMsgAll(SendMsgAllReq) returns (SendMsgAllRsp) {
    }
    
    // 获取用户列表
    rpc GetUserList(GetUserListReq) returns (GetUserListRsp) {
    }
}   

message QueryUserOnlineReq {
    uint32 appID = 1;   //appID
    string userID = 2;  // 用户ID
}

message QueryUserOnlineRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    bool online = 3;
}

message SendMsgReq {
    string seq = 1;     //序列号
    uint32 appID = 2;   // appID/房间ID
    string userID = 3;  // 用户ID
    string cms = 4;     //cms动作：msg/enter/exit
    string type = 5;    // type消息类型，默认text
    string msg = 6;     // msg
    bool isLocal = 7;   // 是否查询本机，acc内部调用为：true（本机查询不到即结束）
}

message SendMsgRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    string sendMsgID = 3;
}

message SendMsgAllReq {
    string seq = 1;     //序列号
    uint32 appID = 2;   // appID/房间ID
    string userID = 3;  //不发送的用户ID
    string cms = 4;     // cms 动作：msg/enter/exit
    string type = 5;    // type消息类型，默认text
    string msg = 6;     // msg
}

message SendMsgAllRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    string sendMsgID = 3;
}

message GetUserListReq {
    uint32 appID = 1;   // appID/房间ID
}

message GetUserListRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    repeated string userID = 3;   
}